# magic-pocket

./: .envrc  .gitignore  .gitleaksignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.rst  forge.toml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docs.yaml  release.yml  uv-lock-update.yml
changelog/: index.html
crates/pocket-rs/: Cargo.toml
crates/pocket-rs/src/: config.rs  error.rs  lib.rs  rds.rs  resources.rs  sqs.rs
crates/pocket-rs/src/secrets/: mod.rs  secretsmanager.rs  ssm.rs
crates/pocket-spa-auth/: Cargo.toml
crates/pocket-spa-auth/src/: lib.rs
docs/: changelog.md  features.md  get_started.md  getting-started.md  index.md  releasing.md
docs/activity/1-doing/: 2026-04-04_weekly-dependency-updates.md
docs/activity/2-todo/: 2026-04-04_weekly-dependency-updates.md  2026-04-09_rds-existing-instance.md  2026-04-09_remove-deepdiff-dependency.md  2026-04-09_route-type-api-to-lambda.md  2026-04-09_upload-source-perf.md  2026-04-12_route-versioning-deploy-hash.md  2026-04-28_pocket-permissions-list.md  2026-05-06_acm-validation-cname-orphan-investigation.md  2026-05-06_cloudfront-redirect-cert-hosted-zone.md
docs/activity/4-completed/: 2026-04-04_weekly-dependency-updates.md  2026-04-09_eventbridge-schedule-support.md  2026-04-09_rds-existing-instance.md  2026-04-09_rds-snapshot-identifier.md  2026-04-09_route-type-api-to-lambda.md  2026-04-09_upload-source-perf.md  2026-04-12_route-versioning-deploy-hash.md  2026-05-06_s3-versioning-lifecycle.md
docs/activity/5-archived/: 2026-04-09_remove-deepdiff-dependency.md
docs/features/: cli.md
docs/guide/: best-practices.md  cli.md  cold-start.md  configuration.md  django.md  loco.md  runtime.md
docs/old/: get_started.md
docs/old/features/: cli.md  outline.md  pocket-toml.md  runtime.md
docs/old/tutorial/: simple.md
docs/permissions/: aws.md
docs/tutorial/: simple.md
example/: db.sqlite3  manage.py  pocket.Dockerfile  pocket.toml  pyproject.toml
example-neon/: .dockerignore  .gitignore  pocket.Dockerfile  pocket.runtime.toml  pocket.toml  pyproject.toml
example-neon/comments/: models.py
example-neon/comments/migrations/: 0001_initial.py
example-neon/comments/templates/comments/: base.html  create.html
example-neon/pocket_example/: settings.py  wsgi.py
example-tidb/: pocket.Dockerfile  pocket.toml  pyproject.toml
example-tidb/comments/: admin.py  urls.py  views.py
example-tidb/comments/management/commands/: create_admin.py  post_scheduled_comment.py
example-tidb/comments/templates/comments/: list.html  login.html
example-tidb/pocket_example/: settings.py  urls.py
example/pocket_example/: asgi.py
features/cli/: index.html
features/outline/: index.html
features/runtime/: index.html
forge/vm/.claude/: settings.json
get_started/: index.html
magic_pocket/: __init__.py  cli.py
pocket/: CLAUDE.md  __init__.py  cli.py  command_handler.py  context.py  general_context.py  general_settings.py  global_context.py  global_settings.py  mediator.py  naming.py  permissions.py  runtime.py  secret_generator.py  secret_store.py  settings.py  utils.py
pocket/cli/: awscontainer_cli.py  cloudfront_cli.py  deploy_cli.py  destroy_cli.py  main.py  main_cli.py  neon_cli.py  s3_cli.py  spa_cli.py  status_cli.py  tidb_cli.py  vpc_cli.py
pocket/django/: __init__.py  client_ip.py  context.py  db_url.py  django_cli.py  lambda_handlers.py  origin_verify.py  runtime.py  settings.py  spa_auth.py  storages.py  urls.py  utils.py
pocket/django/db_backends/rds/: base.py  credentials.py
pocket/provisioning/: __init__.py  neon.py
pocket/resources/: awscontainer.py  base.py  cloudfront.py  neon.py  s3.py  spa.py  tidb.py  vpc.py
pocket/resources/aws/: cloudformation.py  ecr.py  efs.py  lambdahandler.py  s3_utils.py  secretsmanager.py  ssm.py  state.py
pocket/templates/cloudformation/: awscontainer.yaml  cloudfront.yaml  spa.yaml  vpc.yaml
pocket/templates/init/: django-settings.py  pocket.Dockerfile  pocket_simple.toml
search/: search_index.json
tests/: conftest.py  test_awscontainer_envs_yaml.py  test_awscontainer_iam.py  test_basic_auth.py  test_build_command.py  test_cloudfront_acm.py  test_cloudfront_build_error.py  test_cloudfront_post_deploy.py  test_cloudfront_redirect_from.py  test_cloudfront_waf.py  test_codebuild_source_zip.py  test_command_handler.py  test_context.py  test_db_url.py  test_deploy_cli.py  test_deploy_hash_env_sync.py  test_deploy_hash_report.py  test_deploy_order.py  test_destroy.py  test_django.py  test_dockerignore.py  test_dsql.py  test_ecr_name_override.py  test_external_vpc.py  test_hosted_zone.py  test_image_naming.py  test_lambda_architecture.py  test_lambda_env_reload.py  test_lambdahandler.py  test_managed_assets.py  test_migrate_secret_paths.py  test_naming.py  test_neon.py  test_origin_verify.py  test_per_handler_envs.py  test_permissions.py  test_permissions_sync.py  test_promote.py  test_rds.py  test_rds_credential_refresh.py  (+21 more)
tests/data/: spa_auth_vectors.json
tests/data/toml/: awscontainer_pocket_secrets.toml  awscontainer_secrets_ssm.toml  cloudfront_api_default.toml  cloudfront_api_route.toml  cloudfront_deploy_hash.toml  cloudfront_s3_route_bucket_policy.toml  cloudfront_s3_route_double_prefix.toml  cloudfront_s3_route_no_origin_path.toml  cloudfront_signing_key.toml  cloudfront_spa_build.toml  cloudfront_spa_token.toml  db_command_provisioning.toml  default.toml  rds.toml  rds_external_vpc.toml  scheduler.toml  ses.toml  ses_custom_region.toml  staticfiles_publish_command.toml  upstash.toml
tests/sampleprj/: Dockerfile  manage.py
tests/sampleprj/sampleprj/: asgi.py  settings.py  urls.py  wsgi.py
tutorial/simple/: index.html
