[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "magic-pocket"
authors = [{ name = "Masaaki Yasui", email = "yasu@worgue.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "click>=8.1.7",
    "tomli>=1.1.0 ; python_version < '3.11'",
    "mergedeep>=1.3.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.28",
    "awslambdaric>=2.0.10",
    "apig_wsgi>=2.18.0",
    "django-storages>=1.14.2,!=1.14.3",
]

[project.optional-dependencies]
django = ["django>=4.2.0"]

[project.scripts]
pocket = "pocket.cli.main_cli:main"

[tool.rye]
dev-dependencies = [
    "pytest>=7.4.4",
    "moto[all]>=4.2.13",
    "ruff>=0.2.1",
    "pre-commit>=3.6.0",
    "cryptography>=42.0.8",
    "deepdiff>=7.0.1",
    "rich>=13.7.1",
    "pyyaml>=6.0.2",
    "python-on-whales>=0.72.0",
    "jinja2>=3.1.4",
]

[tool.flit.module]
name = "pocket"

[tool.ruff]
# Ignore frontend and django migrations
exclude = [".git", ".ruff_cache", ".venv", "frontend", "migrations"]
[tool.ruff.lint]
# check the default rules at https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
select = ["E", "W", "F", "I", "C", "B"]
