[project]
name = "magic-pocket"
version = "0.1.1"
description = "Deploy system for Django projects."
authors = [{ name = "Masaaki Yasui", email = "yasu@worgue.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "tomli>=1.1.0; python_version < '3.11'",
    "mergedeep>=1.3.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.28",
    "rich>=13.7.0",
    "deepdiff>=6.7.1",
    "pyyaml>=6.0.1",
    "python-on-whales>=0.68.0",
    "jinja2>=3.1.3",
    "awslambdaric>=2.0.10",
    "apig_wsgi>=2.18.0",
    "django-storages>=1.14.2,!=1.14.3",
    "requests>=2.31.0",
]

[project.urls]
Documentation = "https://worgue.github.io/magic-pocket/"
Source = "https://github.com/worgue/magic-pocket"

[project.optional-dependencies]
django = ["django>=4.2.0"]

[project.scripts]
pocket = "pocket.cli.main_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pocket"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "moto[all]>=4.2.13",
    "ruff>=0.2.1",
    "pre-commit>=3.6.0",
    "cryptography>=42.0.8",
    "mkdocs-material>=9.5.38",
    "icecream>=2.1.3",
]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "frontend", "migrations"]
[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
