[project]
name = "magic-pocket"
version = "0.1.1"
description = "Deploy system for Django projects."
authors = [{ name = "Masaaki Yasui", email = "yasu@worgue.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'",
    "mergedeep>=1.3.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.28",
    "rich>=13.7.0",
    "awslambdaric>=2.0.10",
    "apig_wsgi>=2.18.0",
    "django-storages>=1.14.2,!=1.14.3",
]

[project.urls]
Documentation = "https://worgue.github.io/magic-pocket/"
Source = "https://github.com/worgue/magic-pocket"

[project.optional-dependencies]
django = ["django>=4.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pocket"]

[tool.uv.workspace]
members = ["packages/magic-pocket-cli"]

[tool.uv.sources]
magic-pocket-cli = { workspace = true }

[dependency-groups]
dev = [
    "magic-pocket-cli",
    "pytest>=7.4.4",
    "moto[all]>=4.2.13",
    "ruff>=0.2.1",
    "pre-commit>=3.6.0",
    "cryptography>=42.0.8",
    "mkdocs-material>=9.5.38",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "icecream>=2.1.3",
    "pyright>=1.1.408",
]

[tool.pyright]
include = ["pocket", "packages/magic-pocket-cli/pocket_cli", "tests"]
exclude = ["packages/magic-pocket-cli/pocket_cli/templates"]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "frontend", "migrations", "packages/magic-pocket-cli/pocket_cli/templates"]
[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
