[package]
name = "magic-pocket-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
aws-sdk-cloudformation = "1"
aws-sdk-sqs = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
