[package]
name = "magic-pocket-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
# aws-sdk-* は default の `rustls` feature が legacy TLS スタック (rustls 0.21 系) を
# 依存ツリーに残すため外す。HTTP client は default-https-client 側を使う
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudformation = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-dsql = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sqs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
thiserror = "2"
tracing = "0.1"
# RDS パスワードの percent-encode 用。aws-sdk-* が既に依存しているため
# 依存ツリーは増えない (Python 側 urllib.parse.quote との一致が要件)
percent-encoding = "2"

[dev-dependencies]
# 本体は async fn を提供するだけで tokio API を直接使わない (runtime は利用側が
# 用意する)。テストの Runtime::new() と doc 例の #[tokio::main] にのみ必要
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
